cotação com euro e dolar fixos

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Conversor</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>sortei um numero randomico</h1>
+    <h1>Conversor de Real para Euro e Dolar</h1>
     <form action="api.php" method="post">
         <label for="real"></label>
         <input type="number" name="real">
